--- a/sections/7_conclusion.tex
+++ b/sections/7_conclusion.tex
@@ -1,3 +1,6 @@
-We demonstrate that although ABC/CARE benefitted both genders, females experienced a larger number of positive (and significant) benefits. Females especially benefitted in comparison to those in the control group who attended alternative preschools. This speaks to other work that concludes males are more fragile earlier in life. However, we find that early-life, intensive early childhood education can compensate for this fragility in males and result in positive long-term outcomes. 
+\textbf{[JJH: Need to point out consistency with the literature.][We edited the conclusion to connect more with the literature.]}
 
-\textbf{[JJH: Need to point out consistency with the literature.]}
+Although several studies of early childhood education report effects by gender, they do not consider two important factors. The first factor is that there can be gender gaps before treatment that are then changed after treatment. We find that control-group males tend to do better than the control-group females, especially in education and employment outcomes. After treatment, most these gaps are narrowed or reversed. This corresponds with the finding that a larger proportion of the treatment effects are positive and significant for females than for males. ABC/CARE, in addition to improving select individual outcomes, also narrowed the male-female gap in important categories of outcomes. 
+
+The second factor to consider is the alternative setting. We find that lower quality preschools are especially detrimental for boys. This connects to previous work that finds boys to be more vulnerable early in life than girls \citep{golding2016psychology}. Boys similarly are more harmed by unstable home environments (measured by father present and maternal locus of control) than girls. 
+
