--- a/sections/6_gender-differences.tex
+++ b/sections/6_gender-differences.tex
@@ -1,11 +1,13 @@
 \subsection{Possible Explanations for Gender Differences}
 
+\textbf{[We deleted the last part of this section. It was a vestige from previous drafts. This section has been updated to discuss the moderators better and connect to the literature better. We also added PARI (Parental Attitude Research Instrument) to the parenting category. Finally, we added maternal locus of control as a moderator (the closest we had to depression). It is striking to compare the treatment and control plots aggregating over all outcomes (see Figure~\ref{fig:proportion-mlocus}).]}
+
 This section discusses the factors producing gender differences. A major determinant is the choice of the alternative child care arrangements. 
 Estimated treatment effects are very similar across genders for treatment compared to those staying at home full time. Males benefit much more from treatment relative to alternative preschools compared to their benefits from treatment relative to staying at home. This result is consistent with previous research that shows (i) stark gender differences resulting from attending low quality childcare \citep{Kottelenberg-Lehrer_2014_Gender-Effects,Baker_Gruber_Milligan_2015_Noncog_Defects}; and (ii) that females are less sensitive to uncertain environments (see, e.g., \citealp{Autor-etal_2015_Family-Disadvantage}).
 
-In the Section~\ref{sec:introduction} (Figure~\ref{fig:proportion}), we show the proportion of outcomes, by outcome category, for which the males exceed the females. Here, we further divide the control group by the alternative settings and both the treatment and control groups by father present, an important moderator. Figure~\ref{fig:proportion-altpre} shows the proportions dividing by alternative setting. The males who stay at home do better than the females in cognitive and parenting measures, employment, and across all outcomes. Unlike the males who attend alternative preschool, the males who stay at home have similar crime outcomes as the females. Given the prominence of the male criminal activity, this finding highlights the magnitude of harm caused by low-quality alternative preschools for the males. 
+In the Section~\ref{sec:introduction} (Figure~\ref{fig:proportion}), we show the proportion of outcomes, by outcome category, for which the males exceed the females. Here, we further divide the control group by the alternative setting and both the treatment and control groups by father present, an important moderator. Figure~\ref{fig:proportion-altpre} shows the proportions dividing by alternative setting. The males who stay at home do better than the females in cognitive and parenting measures, employment, and across all outcomes. Unlike the males who attend alternative preschool, the males who stay at home have similar crime outcomes as the females. Given the prominence of the male criminal activity, this finding highlights the magnitude of harm caused by low-quality alternative preschools for the males. 
 
-\begin{figure}[!htbp]
+\begin{figure}[H]
 \centering
 \caption{Proportion of Outcomes Males $>$ Females, by Outcome Category, Dividing by Alternative Setting}
 \label{fig:proportion-altpre}
@@ -13,6 +15,8 @@ In the Section~\ref{sec:introduction} (Figure~\ref{fig:proportion}), we show the
 \footnotesize \justify
 Note: These plots show the proportion of outcomes, by outcome category, for which the males' mean is larger than the females' mean. The standard errors and the $p$-values are computed using 100 bootstraps. The $p$-values are one-sided and test the null hypothesis that the proportion of outcomes is greater than $\frac{1}{2}$ The crime outcomes are all coded so that a higher value indicates more criminal activity. All other outcome categories have higher values corresponding to socially desirable outcomes. 
 \end{figure}
+
+Next, we report these proportions by father present (Figure~\ref{fig:proportion-fhome}). Father's presence interacted with treatment favors males for IQ, parenting, and health measures. Males in the control group do better when the father is absent in education and employment. This indicates that treatment complements the home environment for males more than for females. 
 
 \begin{figure}[!htbp]
 \centering
@@ -33,68 +37,28 @@ Note: These plots show the proportion of outcomes, by outcome category, for whic
 Note: These plots show the proportion of outcomes, by outcome category, for which the males' mean is larger than the females' mean. The standard errors and the $p$-values are computed using 100 bootstraps. The $p$-values are one-sided and test the null hypothesis that the proportion of outcomes is greater than $\frac{1}{2}$ The crime outcomes are all coded so that a higher value indicates more criminal activity. All other outcome categories have higher values corresponding to socially desirable outcomes. 
 \end{figure}
 
-We next partition the data by whether or not the father is present for both the treatment and control groups. When the father is at home, males in the treatment group outperform their female counterparts in IQ and parenting. Treatment does not widen the male-female gap in health for those with a present father, but it does for those with an absent father. In the control group, males with a present father are much less involved in criminal activity compared to those with an absent father.
+Another measure of home environment maternal locus of control, which is measured when the subjects were 1.5 years old.\footnote{We define internal locus of control as scoring below the sample mean and an external locus of control as scoring at or above the sample mean. See \citet{Rotter_1966_PMGaA}.} An internal locus of control indicates feeling in control of future outcomes, including those related to child rearing. In contrast, an external locus of control indicates feeling that outside forces determine future outcomes (e.g. luck). Figure~\ref{fig:proportion-mlocus} shows this exercise. In the control group, an internal locus of control leads to better outcomes for males across all outcome categories except health. Another way to state this is that males are more hurt by their mothers having an external locus of control than are females. Although locus of control does not necessarily measure depression, this finding corresponds with \citet{Beeghly-etal_2017_IMHJ}, who find that increased maternal depression lead to worse outcomes for young males relative to females. 
 
-In addition to a gender difference in alternative preschool experiences, there are gender differences in the experience of ABC/CARE treatment. We analyze this by looking at the specific effects of the intervention on parenting.\footnote{In this exercise, we use We use measurements of the Home Observation for Measurement of the Environment (HOME; \citet{Bradley-Caldwell_1977_AJMD}). Although the exact scales vary by age, the scales of the HOME measure generally measure maternal warmth and involvement, absence of punishment, provision of appropriate toys, encouragement of mature behavior and independence, and the physical and language environment. The full score is the sum of these scales.} \textbf{[JJH: Don't we already have this? We established gender differences by treatment effect.]}
-
-When graphing the density of a factor combining the parenting skills measured at different ages, the density of the treatment group in both the male and female subsamples is bimodal (Figure~\ref{fig:total-home}). Because this is not the case for the control group, it is possible that treatment is moderated by another input of home environment. We consider the input of father's presence because it is highly correlated with selection into alternative preschool. For males, the mean of the treatment group if the father is present is greater than that of the treatment group if the father is absent. The reverse is seen for the females.
-
-\begin{figure}
-\textbf{[JJH: We need many more parenting measures.][We are working on including these, and will have them ready tomorrow 4/29.][JJH: p-value.]}
-\begin{center}
-\caption{Density of the HOME Scores by Gender and Experimental Group}
-\label{fig:total-home}
-
-	\begin{subfigure}[b]{0.49\textwidth}
-		\centering
-		\caption{Parenting Skills, Males}
-		\label{fig:home-male-factor}
-			\includegraphics[width=\textwidth]{output/HOME-males-factorhome}
+\begin{figure}[!htbp]
+\centering
+\caption{Proportion of Outcomes Males $>$ Females, by Outcome Category, Dividing by Maternal Locus of Control}
+\label{fig:proportion-mlocus}
+\begin{subfigure}[h]{0.7\textwidth}
+	\centering
+	\caption{Control Group}
+	\includegraphics[width=\textwidth]{output/gendergaps-control-moderated-mlocus}
 	\end{subfigure}
-	\begin{subfigure}[b]{0.49\textwidth}
-		\centering
-		\caption{Parenting Skills, Females}
-		\label{fig:home-female-factor}
-			\includegraphics[width=\textwidth]{output/HOME-females-factorhome}
+	
+\begin{subfigure}[h]{0.7\textwidth}
+	\centering
+	\caption{Treatment Group}
+	\includegraphics[width=\textwidth]{output/gendergaps-treatment-moderated-mlocus}
 	\end{subfigure}
-\end{center}
 \footnotesize \justify
-Note: These plots show the distribution the factor of HOME scores. The factors are computed by gender using full HOME scores at 0.5, 1.5, 2.5, and 8 years. The vertical lines are the means of the treatment group by father's presence.
+Note: These plots show the proportion of outcomes, by outcome category, for which the males' mean is larger than the females' mean. The standard errors and the $p$-values are computed using 100 bootstraps. The $p$-values are one-sided and test the null hypothesis that the proportion of outcomes is greater than $\frac{1}{2}$ The crime outcomes are all coded so that a higher value indicates more criminal activity. All other outcome categories have higher values corresponding to socially desirable outcomes. 
 \end{figure}
 
-%We explore this trend more closely in Figure~\ref{fig:total-home-quantiles}. To do so, we calculate the distribution pooling experimental groups but splitting by gender and father's presence. We then calculate, by gender and father's presence, the proportion of the treatment group that is in quantile 1 versus quantile 2. We do the same for the control group.
-%
-%\begin{sidewaysfigure}
-%\begin{center}
-%\caption{Factor HOME Scores}
-%\label{fig:total-home-quantiles}
-%	\begin{subfigure}[b]{0.49\textwidth}
-%		\centering
-%		\caption{HOME, Father Absent, Males}
-%		\label{fig:home-male-mean}
-%			\includegraphics[width=\textwidth]{output/HOME-male1-fhome0-2quant}
-%	\end{subfigure}
-%	\begin{subfigure}[b]{0.49\textwidth}
-%		\centering
-%		\caption{HOME, Father Absent, Females}
-%		\label{fig:home-female-mean}
-%			\includegraphics[width=\textwidth]{output/HOME-male0-fhome0-2quant}
-%	\end{subfigure}
-%	
-%	\begin{subfigure}[b]{0.49\textwidth}
-%		\centering
-%		\caption{HOME, Father Present, Males}
-%		\label{fig:home-male-factor}
-%			\includegraphics[width=\textwidth]{output/HOME-male1-fhome1-2quant}
-%	\end{subfigure}
-%	\begin{subfigure}[b]{0.49\textwidth}
-%		\centering
-%		\caption{HOME, Father Present, Females}
-%		\label{fig:home-female-factor}
-%			\includegraphics[width=\textwidth]{output/HOME-male0-fhome1-2quant}
-%	\end{subfigure}
-%\end{center}
-%\raggedright \footnotesize
-%Note: The horizontal axis divides a factor of the HOME scores into the first and second quantile of the distribution pooling across experimental groups, but splitting  by gender and father's presence. The factors are computed by gender using full HOME scores at 0.5, 1.5, 2.5, and 8 years. The lower $p$-value tests that the treatment proportion is less than the control proportion within a quantile. The upper $p$-value tests that the treatment proportion is greater than the control proportion within a quantile. The numbers reported in the bars are the proportions. All standard errors and $p$-values are calculated using 1,000 bootstraps.
-%\end{sidewaysfigure}
+Maternal locus of control moderates the treatment outcomes differently. Regardless of locus of control males do not do much better than their female counterparts. The exception is for health outcomes, in which the pattern of boys with mothers with external loci of control outperform those with mothers with internal loci of control. Aggregating across outcomes, we can see that maternal locus of control does not moderate the males' outcomes if they attend ABC/CARE as it does if they are in the control group. 
+
+
 
