--- a/output/abccare-gendergaps-summarizingtable.tex
+++ b/output/abccare-gendergaps-summarizingtable.tex
@@ -7,12 +7,12 @@ Category & Control Group  &  Control Group &  Control Group &  Treatment \\
 IQ 								& \checkmark &  \checkmark* & $\times$&\checkmark \\
 Achievement						& \checkmark &  \checkmark* &$\times$ & $\times$* \\
 Parenting							& \checkmark&  \checkmark* &$\times$ & \checkmark \\
-Social-emotional					& $\times$&$\times$ &$\times$* &$\times$* \\
-Education							& \checkmark&\checkmark & $\times$ &$\times$* \\
+Social-emotional					& $\times$&$=$ &$\times$* &$\times$* \\
+Education							& \checkmark&\checkmark & $=$ &$\times$* \\
 Employment						&  \checkmark* &  \checkmark* &  \checkmark* &$\times$* \\
 Parental income					&  \checkmark* &\checkmark & \checkmark & $\times$\\
 Health 							& \checkmark &$\times$ &\checkmark &  \checkmark* \\
-Crime							&  \checkmark* &  $\times$ & \checkmark* &  \checkmark* \\
+Crime							&  \checkmark* &  $=$ & \checkmark* &  \checkmark* \\
 \midrule
 All								&  \checkmark* &\checkmark*&  $\times$ & $\times$\\
 \bottomrule
