--- a/output/genderdifflit.tex
+++ b/output/genderdifflit.tex
@@ -7,12 +7,12 @@
 	&		&	likelihood of subsequent child	&		&		&		\\ \\ \midrule
 \citet{Ou_Reynolds_2010_Mechanisms_CYSR}	&	Chicago Child-Parent Center	&	Differences in treatment effects consequence	&	-educational attainment 	&	No	&	Yes	\\ 
 	&	- 1334 youths (682 females, 652 males)	&	of difference in mediators	&	-HS or GED (jointly coded)	&		&		\\ 
-	&	- center-based, served 3/4 year olds	&	-males mediators: preschool participation	&		&		&		\\ 
+	&	- center-based, served 3/4 year olds	&	-male mediators: preschool participation	&		&		&		\\ 
 	&	- RCT 	&	-female mediators: family support, abuse/neglect	&		&		&		\\ \\ \midrule
 \citet{Bertrand_Pan_2013_AEJAE}	&	ECLS-K (ATUS as complementary)	&	Stark gender differences 	&	-socio-emotional measures	&	No	&	Yes	\\ 
 	&	-observational study up to 5th grade	&	- females: better on all socio-emotional measures	&	-grade suspension 	&		&		\\ 
 	&		&	(gaps widen when children get older)	&	- tests scores (math and reading)	&		&		\\ 
-	&		&	- males: worst at reading by better than math at 	&		&		&		\\ 
+	&		&	- males: worst at reading but better than math at 	&		&		&		\\ 
 	&		&	1st grade	&		&		&		\\ \\ \midrule
 \citet{cornwell2013noncognitive}	&	ECLS-K 	&	Gender differences in tests and grades	&	-reading, science, math tests scores 	&	No	&	No	\\ 
 	&	-observational study up to 5th grade	&	-males: better in science and math; worst grades	&	-grades	&		&		\\ 
@@ -29,13 +29,13 @@
 	&		&	- no precise difference in cognition	&	-parental child relationship and quality of interactions	&		&		\\ 
 	&		&		&	-maternal labor supply	&		&		\\ \\ \midrule
 \citet{Baker-Milligan_2013_Boy-Girl-Differences}	&	Observational studies in three countries	&	Gender differences in parental investment 	&	-parental investment across different ages	&	No	&	Yes	\\ 
-	&	-Canada: NLSCY (ages 1 to 5)	&	-no difference in mother?s time at home 	&		&		&		\\ 
+	&	-Canada: NLSCY (ages 1 to 5)	&	-no difference in mother's time at home 	&		&		&		\\ 
 	&	-UK: Millennium Cohort Study (ages 1 to 7)	&	-females: more investment in teaching activities	&		&		&		\\ 
-	&	-US: ECLS-B (ages 1 to 4)	&	-males: more father?s investment at older ages	&		&		&		\\ \\ \midrule
+	&	-US: ECLS-B (ages 1 to 4)	&	-males: more father's investment at older ages	&		&		&		\\ \\ \midrule
 \citet{Magnuson_Kelchen_Duncan_etal_2016_ECRQ}	&	23 programs (meta-analysis)	&	No gender differences, in general	&	-all programs: cognition	&	No	&	No	\\ 
 	&	- at least 10 controls	&	- males/females: cognitive benefits	&	-some programs: achievement, behavior,	&		&		\\ 
 	&	- from 1960 to 2013	&	- no effect on behavior or mental health	&	adult outcomes	&		&		\\ 
-	&	- < 50\%attrition	&		&		&		&		\\ 
+	&	- $<$ 50\%attrition	&		&		&		&		\\ 
 	&	- RCTs	&		&		&		&		\\ \\ \midrule
 \citet{Schore_2017_IMHJ}	&	Literature survey	&	Sex differences in brain maturation 	&	- brain maturation (right brain development)	&	N/A	&	Yes	\\ 
 	&		&	-males: less time spent with mothers, more	&	- daycare behavior	&		&		\\ 
